--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "astro": "^4.8.1",
     "dayjs": "^1.11.11",
+    "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
